# firecracker

./: .gitignore  Cargo.toml  api-send.sh
.cargo/: config
src/api_server/src/: lib.rs  parsed_request.rs
src/api_server/src/request/: snapshot.rs
src/firecracker/: Cargo.toml
src/firecracker/src/: main.rs
src/logger/src/: metrics.rs
src/mss/: Cargo.toml  build.rs
src/mss/src/: lib.rs  mss_client_api.h  unit_test.rs
src/sync-recv/: Cargo.toml
src/sync-recv/src/: main.rs
src/vm-memory/: Cargo.toml
src/vm-memory/src/: lib.rs
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  lib.rs  persist.rs  rpc_interface.rs  sync.rs  sync_backend.rs
src/vmm/src/vmm_config/: snapshot.rs
