[package]
name = "mss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.53.1"

[dependencies]
libc = "0.2"
maligned = "0.2.1"
core_affinity = "0.5"
crc32fast = "1.3.2"
bytemuck = "1.9"
differ = "1.0"

[profile.dev]
opt-level = 2
debug = 2

#[profile.test]
#opt-level = 0
#debug = 2

#[dev-dependencies]
#criterion = "0.3"

# [[bench]]
# name = "benchmark"
# harness = false
